cluster/apps/networking/traefik/external/rass.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rass
  namespace: default
spec:
  ports:
    - name: default
      port: 8123
      protocol: TCP
      targetPort: 8123
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: rass
  namespace: default
subsets:
  - addresses:
    # list all external ips for this service
      - ip: 192.168.102.44
    ports:
      - name: default
        port: 8123
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: console
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd
  name: rass
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: "rass.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: rass
                port:
                  number: 8123
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "rass.${SECRET_DOMAIN}"
      secretName: rass-tls
status:
  loadBalancer:
    ingress:
      - ip: 192.168.102.44
