cluster/apps/networking/traefik/external/tristian.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unraid
  namespace: default
spec:
  ports:
    - name: unraid
      port: 3000
      protocol: TCP
      targetPort: 3000
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unraid
  namespace: default
subsets:
  - addresses:
    # list all external ips for this service
      - ip: 192.168.102.46
    ports:
      - name: unraid
        port: 3000
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: console
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: unraid
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: tristian.id
      http:
        paths:
          - backend:
              service:
                name: unraid
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - tristian.id
      secretName: tristian-tls
status:
  loadBalancer:
    ingress:
      - ip: 192.168.102.46
