cluster/apps/networking/traefik/external/ubuntu.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ubuntu
  namespace: default
spec:
  ports:
    - name: changedetection
      port: 5000
      protocol: TCP
      targetPort: 5000
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ubuntu
  namespace: default
subsets:
  - addresses:
    # list all external ips for this service
      - ip: 192.168.102.19
    ports:
      - name: changedetection
        port: 5000
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: console
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd
  name: ubuntu
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: "cd.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: ubuntu
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "cd.${SECRET_DOMAIN}"
      secretName: tristian-tls
status:
  loadBalancer:
    ingress:
      - ip: 192.168.102.19
